# Cooperative-Robot-2

./: .gitignore  LICENSE  README.md  cobot.launch  cobot_master.launch  cobot_slave.launch  setup_environment_master.sh  setup_environment_slave.sh  test.launch
devel/: .catkin  .rosinstall  setup.sh
devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h
devel/include/driver_node/: driver_setting.h
devel/include/encoder_node/: encoder_msg.h
devel/include/master_fsm/: ServerListener.h  ServerListenerRequest.h  ServerListenerResponse.h
devel/include/server_node/: status.h
devel/lib/beginner_tutorials/: listener  talker
devel/lib/driver_node/: driver_node
devel/lib/encoder_node/: encoder_node
devel/lib/gpio/: gpio_node
devel/lib/http_server/: server
devel/lib/master_fsm/: master_fsm
devel/lib/pkgconfig/: begginer_tutorials.pc  beginner_tutorials.pc  driver_node.pc  encoder.pc  encoder_node.pc  gpio.pc  http_server.pc  led_node.pc  master_fsm.pc  node_example.pc  server_node.pc  sysfs.pc  test_node.pc  tutorial_pkg.pc
devel/lib/server_node/: server_node
devel/lib/sysfs/: sysfs_node
devel/lib/test_node/: test_node_node
devel/share/begginer_tutorials/cmake/: begginer_tutorials-msg-extras.cmake  begginer_tutorials-msg-paths.cmake  begginer_tutorialsConfig.cmake
devel/share/encoder/cmake/: encoderConfig.cmake  (+2 more)
html/: Steve_Fix.html  index.html  script.js  styles.css
install/: .rosinstall  _setup_util.py
install/include/beginner_tutorials/: AddTwoIntsResponse.h
install/lib/pkgconfig/: beginner_tutorials.pc
install/share/http_server/: package.xml
install/share/node_example/: package.xml
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/src/: listener.cpp  talker.cpp
src/driver_node/: CMakeLists.txt  package.xml
src/driver_node/include/: pwm.hh
src/driver_node/msg/: driver_setting.msg
src/driver_node/src/: main.cc  pwm.cc
src/driver_node/srv/: driver_srv.srv
src/encoder/: CMakeLists.txt
src/encoder/msg/: EncoderInfo.msg
src/encoder/src/: encoder.cpp
src/encoder_node/: CMakeLists.txt  package.xml
src/encoder_node/msg/: encoder_msg.msg
src/encoder_node/src/: main.cc
src/http_server/: CMakeLists.txt  package.xml
src/http_server/src/: example.cc
src/master_fsm/: CMakeLists.txt  package.xml
src/master_fsm/include/: state.hh
src/master_fsm/msg/: status.msg
src/master_fsm/src/: main.cc  state.cc
src/master_fsm/srv/: ServerListener.srv
src/server_node/: CMakeLists.txt  package.xml
src/server_node/src/: main.cc
src/slave_fsm/: CMakeLists.txt  package.xml
src/slave_fsm/msg/: status.msg
src/slave_fsm/src/: main.cc  state.cc
(+48 files in other folders)
