<?xml version="1.0"?>
<package format="2">
  <name>driver_node</name>
  <version>0.0.0</version>
  <description>The driver_node package</description>
  <maintainer email="xillinux@todo.todo">xillinux</maintainer>
  <license>TODO</license>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


 </package>
